--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
     "react-native": "^0.75.3",
     "react-native-calendars": "^1.1307.0",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
