--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
+    "react-native-timer-picker": "^2.0.0",
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.1.2",
     "realm": "^20.0.0"
