--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@reduxjs/toolkit": "^2.2.7",
     "babel-plugin-module-resolver": "^5.0.2",
+    "i18next": "^24.1.2",
     "react": "18.3.1",
+    "react-i18next": "^15.2.0",
     "react-native": "^0.75.3",
     "react-native-calendars": "^1.1307.0",
     "react-native-draggable-flatlist": "^4.0.1",
