--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+import groovy.json.JsonSlurper
+
+def loadSecrets() {
+    def secretsFile = file('./secrets.json')
+    def secrets = new JsonSlurper().parse(secretsFile)
+    return secrets
+}
+def secrets = loadSecrets()
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -83,7 +91,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     signingConfigs {
         debug {
@@ -92,16 +100,21 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('./dooit-release-key.keystore')
+            storePassword secrets.DOOIT_STORE_PASSWORD
+            keyAlias secrets.DOOIT_KEY_ALIAS
+            keyPassword secrets.DOOIT_KEY_PASSWORD
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
+            signingConfig signingConfigs.release
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
