--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.4.1",
     "react-native-paper": "^5.13.1",
     "react-native-paper-dates": "^0.22.34",
     "react-native-reanimated": "3.15.5",
