--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.75.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "i18next": "^24.1.2",
     "react": "18.3.1",
@@ -37,6 +38,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "realm": "^20.0.0"
