--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "realm": "^20.0.0"
