--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/supabase-js": "^2.75.0",
     "babel-plugin-module-resolver": "^5.0.2",
