--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^15.2.0",
     "react-native": "^0.75.3",
     "react-native-calendars": "^1.1307.0",
+    "react-native-config": "^1.6.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
